--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="/mobile.css">
-    <title>Space Kit - Webflow HTML website template</title>
+    <title>Space Kit</title>
 </head>
 
 <body>
