--- a/product-pages/allprdts.html
+++ b/product-pages/allprdts.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../main.css">
     <link rel="shortcut icon" href="../web-images/favicon-img.png" type="image/x-icon">
+    <link rel="stylesheet" href="/mobile.css">
+
     <title>Space Kit</title>
 </head>
 
@@ -39,7 +41,7 @@
     </div>
 
     <div class="container6">
-        <div class="explore-bag">
+        <div class="explore-bag" onclick="window.location.href='./explorebag.html'">
             <div class="exp-img">
                 <img class="explore-bagimg" src="../web-images/explore-bag.jpg" alt="">
             </div>
@@ -50,7 +52,7 @@
                 <P>$26</P>
             </div>
         </div>
-        <div class="explore-bag">
+        <div class="explore-bag" onclick="window.location.href='./journeybook.html'">
             <div class="exp-img">
                 <img class="explore-bagimg" src="../web-images/journey-book.jpg" alt="">
             </div>
@@ -61,7 +63,7 @@
                 <P>$12</P>
             </div>
         </div>
-        <div class="explore-bag">
+        <div class="explore-bag" onclick="window.location.href='./twocups.html'">
             <div class="exp-img">
                 <img class="explore-bagimg" src="../web-images/2cups-img.jpg" alt="">
             </div>
@@ -140,12 +142,12 @@
                 <div class="footerup-middle">
                     <ul>
                         <li>Explore</li>
-                        <li>Home</li>
-                        <li>Products</li>
+                        <li onclick="window.location.href='../index.html'">Home</li>
+                        <li onclick="window.location.href='./allprdts.html'">Products</li>
                     </ul>
                     <ul>
                         <li>Support</li>
-                        <li>FAQ</li>
+                        <li onclick="window.location.href='./faq.html'">FAQ</li>
                         <li>Contact</li>
                     </ul>
                     <ul>
